--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -575,3 +575,14 @@ account-federations #federationInfoRight p:only-child {
 account-teamspaces label, account-teamspaces p {
   font-size: 14px;
 }
+
+#floating-button {
+  position: absolute;
+  bottom: 52px;
+  right: 15px;
+}
+
+.userContent {
+  min-height: 200px;
+}
+
