--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -1,32 +1,30 @@
-div(ng-repeat="(accountIndex, account) in vm.accountsToUse")
-	div(layout="column", layout-align="start", ng-repeat="(federationIndex, federation) in vm.federations")
-		div(ng-if="federation.federate" layout="row", layout-align="start center")
-			div(flex, layout-fill)
-				md-list-item.model-indent(ng-click="vm.viewFederation($event, accountIndex, federationIndex)", flex)
-					md-button.md-icon-button.federation(aria-label="Federation")
-						md-icon.angular-material-icons() border_all
-					.md-list-item-text(flex="100")
-						p {{federation.model}}
+div(ng-if="vm.federation.federate" layout="row", layout-align="start center")
+	div(flex, layout-fill)
+		md-list-item.model-indent(ng-click="vm.viewFederation($event, vm.account, vm.project, vm.federation)", flex)
+			md-button.md-icon-button.federation(aria-label="Federation")
+				md-icon.angular-material-icons() border_all
+			.md-list-item-text(flex="100")
+				p {{vm.federation.model}}
 
-			div.modelRight(layout-align="start-center" layout="row")
-				.modelRight(layout="row", layout-align="start center")
-					p.modelTimestamp {{federation.timestamp | prettyDate:true}}
-					md-menu(md-position-mode="target-right target", ng-if="vm.showMenu(federation, account.account)", id="{{vm.dialogCloseTo}}")
-						md-button.md-icon-button.md-accent(aria-label="More", ng-click="$mdOpenMenu($event)")
-							md-icon.md-menu-origin.angular-material-icons(md-menu-origin) more_vert
-						md-menu-content(width="3")
-							md-menu-item(ng-repeat="(key, value) in federation.federationOptions", ng-if="!value.hidden")
-								md-button(ng-click="vm.doFederationOption($event, key, accountIndex, federationIndex)")
-									div(layout="row", flex)
-										p(flex, style="color:{{value.color}}") {{value.label}}
-										md-icon.angular-material-icons(md-menu-align-target, style="color:{{value.color}}") {{value.icon}}
+	div.modelRight(layout-align="start-center" layout="row")
+		.modelRight(layout="row", layout-align="start center")
+			p.modelTimestamp {{vm.federation.timestamp | prettyDate:true}}
+			md-menu(md-position-mode="target-right target", ng-if="vm.showMenu(vm.federation, vm.account)", id="{{vm.dialogCloseTo}}")
+				md-button.md-icon-button.md-accent(aria-label="More", ng-click="$mdOpenMenu($event)")
+					md-icon.md-menu-origin.angular-material-icons(md-menu-origin) more_vert
+				md-menu-content(width="3")
+					md-menu-item(ng-repeat="(key, value) in vm.federation.federationOptions", ng-if="!value.hidden")
+						md-button(ng-click="vm.doFederationOption($event, key, vm.account, vm.project, vm.federation)")
+							div(layout="row", flex)
+								p(flex, style="color:{{value.color}}") {{value.label}}
+								md-icon.angular-material-icons(md-menu-align-target, style="color:{{value.color}}") {{value.icon}}
 
 
-		// Models list
-		md-list-item.federationModelsList
-			span(ng-repeat="subModel in federation.subModels")
-				| {{subModel.model}}
-				span(ng-if="!$last")
-					| ,
-					=" "
+// Models list
+md-list-item.federationModelsList
+	span(ng-repeat="subModel in vm.federation.subModels")
+		| {{subModel.model}}
+		span(ng-if="!$last")
+			| , 
+			=" "
 
