--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -4,7 +4,7 @@ div(ng-if="vm.federation.federate" layout="row", layout-align="start center")
 			md-button.md-icon-button.federation(aria-label="Federation")
 				md-icon.angular-material-icons() border_all
 			.md-list-item-text(flex="100")
-				p {{vm.federation.model}}
+				span {{vm.federation.model}}
 
 	div.modelRight(layout-align="start-center" layout="row")
 		.modelRight(layout="row", layout-align="start center")
