--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -40,6 +40,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 						placeholder="{{vm.federationData.model || 'Federation name'}} "
 						value="{{vm.federationData.name}}"
 						tdr-focus="true"
+						ng-disabled="vm.federationData.model && vm.federationData._isEdit"
 						ng-model="vm.federationData.model"
 						ng-pattern="vm.modelRegExp" 
 						maxlength=20)
@@ -58,57 +59,59 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 
 				md-divider
 
-				// List
-				div(layout="row", flex)
-					// Available
-					div(layout="column", flex)
-						p(layout="row", layout-align="center center") Available
-						md-list
+				div(ng-if="vm.federationData.model && vm.federationData.unit")
+
+					// List
+					div(layout="row", flex)
+						// Available
+						div(layout="column", flex)
+							p(layout="row", layout-align="center center") Available
 							md-list
-								md-list-item.federationModel(
-								ng-repeat="model in vm.getPotentialFederationModels()"
-								ng-if="!vm.isSubModel(vm.federationData, model)"
-								style="opacity:{{model.federated? 0.2 : 1.0}}")
+								md-list
+									md-list-item.federationModel(
+									ng-repeat="model in vm.getPotentialFederationModels()"
+									ng-if="!vm.isSubModel(vm.federationData, model)"
+									style="opacity:{{model.federated? 0.2 : 1.0}}")
 
-									md-icon.angular-material-icons dashboard
-									p {{model.model}}
+										md-icon.angular-material-icons dashboard
+										p {{model.model}}
 
-									span(flex)
-									md-button.md-icon-button(
-									aria-label="Add"
-									ng-click="vm.addToFederation($index, vm.federationData.teamspace, vm.getPotentialFederationModels())"
-									)
-										md-icon.angular-material-icons.md-accent add_circle
+										span(flex)
+										md-button.md-icon-button(
+										aria-label="Add"
+										ng-click="vm.addToFederation($index, vm.federationData.teamspace, vm.getPotentialFederationModels())"
+										)
+											md-icon.angular-material-icons.md-accent add_circle
 
 
-					// Divider
-					div(layout="row", layout-align="center")
-						#federationDivider(flex="none")
+						// Divider
+						div(layout="row", layout-align="center")
+							#federationDivider(flex="none")
 
-					// Federated
-					div(layout="column", flex)
-						p(layout="row", layout-align="center center") Federated
-						md-list
-							div(ng-repeat="model in vm.federationData.subModels", layout="column")
-							
-								md-list-item.federationModel
+						// Federated
+						div(layout="column", flex)
+							p(layout="row", layout-align="center center") Federated
+							md-list
+								div(ng-repeat="model in vm.federationData.subModels", layout="column")
+								
+									md-list-item.federationModel
 
-									md-icon.angular-material-icons dashboard
-									p {{model.model}}
-									span(flex)
-									md-button.md-icon-button(aria-label="Remove", ng-click="vm.removeFromFederation(model.model)")
-										md-icon.angular-material-icons.md-accent remove_circle
-								div(ng-if="vm.showRemoveWarning")
-									p#federationWarning This model cannot be removed. Please delete federation.
+										md-icon.angular-material-icons dashboard
+										p {{model.model}}
+										span(flex)
+										md-button.md-icon-button(aria-label="Remove", ng-click="vm.removeFromFederation(model.model)")
+											md-icon.angular-material-icons.md-accent remove_circle
+									div(ng-if="vm.showRemoveWarning")
+										p#federationWarning This model cannot be removed. Please delete federation.
 
-				md-divider
+					md-divider
 
-				// Save/Cancel
-				#federationSave(layout="row", layout-align="start center")
-					md-button.md-raised.md-accent(
-						ng-disabled="vm.newFederationButtonDisabled", 
-						ng-click="vm.saveFederation(vm.federationData.teamspace, vm.federationData.project)"
-						) Save
-					md-button.md-accent(ng-click="vm.closeDialog()") Cancel
+					// Save/Cancel
+					#federationSave(layout="row", layout-align="start center")
+						md-button.md-raised.md-accent(
+							ng-disabled="vm.newFederationButtonDisabled", 
+							ng-click="vm.saveFederation(vm.federationData.teamspace, vm.federationData.project)"
+							) Save
+						md-button.md-accent(ng-click="vm.closeDialog()") Cancel
 
-				p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
+					p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
