--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -60,6 +60,9 @@
 										on-setup-delete-model="vm.setupDeleteModel(event, model, account, project)",
 										quota="vm.quota"
 										subscriptions="vm.subscriptions")
+
+									p.no-federations(ng-if="vm.getInividualModels(project.models).length == 0") No models created
+
 								
 								div(ng-click="vm.toggleFederations(project)")
 									md-list-item.tree-node(flex)
@@ -145,7 +148,7 @@ div(layout="row" flex layout-align="end center")
 	#floating-button(layout="column" ng-if="vm.addButtons")
 		md-button(layout="row" ng-click="vm.newModel($event, vm.accounts)") Add Model
 		md-button(layout="row" ng-click="vm.setupNewFederation($event, vm.accounts)") Add Federation 
-		md-button(layout="row") Add Project
+		md-button(layout="row" ng-click="vm.newProject($event,  vm.accounts)") Add Project
 div(layout="row" flex layout-align="end center")
 	md-button.md-accent.md-fab.md-mini(aria-label="Add", ng-click="vm.addButtonsToggle()")
 		md-icon.angular-material-icons {{vm.addButtonType}}
