--- a/frontend/account/jade/projectDialog.jade
+++ b/frontend/account/jade/projectDialog.jade
@@ -1,16 +1,39 @@
 md-dialog.newModelDialog(aria-label="New project")
 	md-toolbar
 		.md-toolbar-tools
-			h2(ng-if="vm.isNewProject") New Project
-			h2(ng-if="!vm.isNewProject") Edit Project
+			h2(ng-if="vm.newProjectName == ''") New Project
+			h2(ng-if="vm.newProjectName != ''") Edit Project
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-content(layout-margin)
 		div(layout="column")
 			md-input-container
-				input(placeholder="Project", tdr-focus="true", ng-model="vm.newProjectName")
+				md-select(
+					ng-disabled="vm.projectTeamspaceDialog != ''"
+					placeholder="Teamspace"
+					tdr-focus="true"
+					ng-model="vm.newProjectTeamspace")
+					md-option(
+						ng-repeat="account in vm.accounts"
+						ng-selected="account.name == vm.projectTeamspaceDialog"
+						value="{{account.name}}") {{account.name}}
 
-		md-input-container()
-					md-button.md-raised.md-accent(ng-disabled="!vm.newProjectName", ng-click="vm.saveNewProject(vm.newProjectName)") Save
+			md-input-container
+				input(
+					placeholder="Project"
+					ng-model="vm.newProjectName")
+
+			md-input-container()
+				md-button.md-raised.md-accent(
+					ng-if="vm.oldProjectName == ''"
+					ng-disabled="!vm.newProjectName"
+					ng-click="vm.saveNewProject(vm.newProjectTeamspace, vm.newProjectName)") Save
+
+				md-button.md-raised.md-accent(
+					ng-if="vm.oldProjectName != ''"
+					ng-disabled="vm.newProjectName == vm.oldProjectName"
+					ng-click="vm.updateProject(vm.newProjectTeamspace, vm.oldProjectName,vm.newProjectName)") Update
+
+				p#modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
 
