--- a/frontend/account/jade/paypalDialog.jade
+++ b/frontend/account/jade/paypalDialog.jade
@@ -1,4 +1,4 @@
-md-dialog#paypalDialog(aria-label="New database")
+md-dialog#paypalDialog(aria-label="Paypal")
 	md-toolbar
 		.md-toolbar-tools
 			h2 Subscription
