--- a/frontend/account/jade/deleteProjectDialog.jade
+++ b/frontend/account/jade/deleteProjectDialog.jade
@@ -1,7 +1,7 @@
 md-dialog.deleteDialog(aria-label="Delete Project")
 	md-toolbar
 		.md-toolbar-tools
-			h2 {{vm.title}}
+			h2 Delete Project
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
@@ -11,10 +11,10 @@ md-dialog.deleteDialog(aria-label="Delete Project")
 				p
 					| Do you really want to delete project
 					=" "
-					span#deleteName {{vm.projectDeleteName}}?
+					span#deleteName {{vm.projectData.projectDeleteName}}?
 				br
-				p#deleteWarning {{vm.deleteWarning}}
+				p#deleteWarning {{vm.projectData.deleteWarning}}
 			md-input-container
 				md-button.md-raised.md-accent(ng-click="vm.closeDialog()") No
-				md-button.md-accent(ng-click="vm.deleteProject(vm.projectDeleteTeamspace, vm.projectDeleteName)") Yes
-			p#deleteError(ng-if="vm.errorMessage") {{vm.errorMessage}}
+				md-button.md-accent(ng-click="vm.deleteProject(vm.projectData.deleteTeamspace, vm.projectData.deleteName)") Yes
+			p#deleteError(ng-if="vm.projectData.errorMessage") {{vm.projectData.errorMessage}}
