--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -23,14 +23,13 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				md-select(
 					placeholder="Project",
 					ng-model="vm.federationData.project"
-					ng-disabled="vm.federationData.project && vm.federationData._isEdit"
-					)
+					ng-disabled="vm.federationData.project === 'default' || (vm.federationData.project && vm.federationData._isEdit)")
 					md-option(
-						ng-repeat="project in vm.getProjects(vm.federationData.teamspace)",
+						ng-repeat="project in vm.getProjects(vm.federationData.teamspace)"
 						ng-selected="vm.federationData.project === project.name"
 						value="{{project.name}}") {{project.name}}
 
-			div(ng-if="vm.federationData.teamspace && vm.federationData.project")
+			div(ng-if="(vm.federationData.teamspace && vm.federationData.project) || vm.federationData.project === 'default'")
 			
 				// Federation name
 
@@ -69,7 +68,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 							md-list
 								md-list
 									md-list-item.federationModel(
-									ng-repeat="potentialFedModel in vm.getPotentialFederationModels()"
+									ng-repeat="potentialFedModel in vm.getPotentialFederationModels(vm.isDefaultFederation)"
 									ng-if="!vm.isSubModel(vm.federationData, potentialFedModel)"
 									style="opacity:{{model.federated ? 0.13 : 1.0}}")
 
@@ -79,7 +78,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 										span(flex)
 										md-button.md-icon-button(
 										aria-label="Add"
-										ng-click="vm.addToFederation($index, vm.federationData.teamspace, vm.getPotentialFederationModels())"
+										ng-click="vm.addToFederation($index, vm.federationData.teamspace, vm.getPotentialFederationModels(vm.isDefaultFederation))"
 										)
 											md-icon.angular-material-icons.md-accent add_circle
 
