--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -1,13 +1,19 @@
-img#homeBackground(src="/public/images/viewer_background.jpg")
-viewermanager
-#legalLinks(layout="row")
-	a(ng-repeat="display in vm.legalDisplays", target="_blank", href="{{display.page}}") {{display.title}}
+div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
+	img#homeBackground(src="/public/images/viewer_background.jpg")
+	viewermanager
+	#legalLinks(layout="row")
+		a(ng-repeat="display in vm.legalDisplays", target="_blank", href="{{display.page}}") {{display.title}}
 
-#homeLogo(style="pointer-events:{{vm.pointerEvents}}")
-	img(src="/public/images/3drepo-logo-white.png", ng-click="vm.home()")
+	#homeLogo(style="pointer-events:{{vm.pointerEvents}}")
+		img(src="/public/images/3drepo-logo-white.png", ng-click="vm.home()")
 
-#homeLoggedOut(ng-show="!vm.state.changing")
+	#homeLoggedOut(ng-show="!vm.state.changing")
 
-div(ng-if="!vm.state.changing")
-	div(ng-if="!vm.goToUserPage")
-		account-dir(account='vm.state.account', state='vm.state', query='vm.query', ng-if="vm.state.loggedIn")
+	div(ng-if="!vm.state.changing")
+		div(ng-if="!vm.goToUserPage")
+			account-dir(
+				account='vm.state.account'
+				state='vm.state'
+				query='vm.query'
+				ng-if="vm.state.loggedIn"
+				keys-down="vm.keysDown")
