--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -1,7 +1,7 @@
 //.container-fluid#project(global ng-if="!vm.state.bid4free")
 
 // tabindex is required for ng-keydown to work on a div/directive
-#project(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
+#project()
 	#project-viewport-container.row(tabindex="0", tdr-focus="true")
 		#viewermanager
 
@@ -38,11 +38,11 @@
 		qr-code-reader
 
 multi-select(
-account="vm.account"
-project="vm.project"
-keys-down="vm.keysDown"
-send-event="vm.sendEvent(type, value)"
-event="vm.event"
-tree-map="vm.treeMap"
-set-selected-objects="vm.setSelectedObjects(selectedObjects)"
-initial-selected-objects="vm.initialSelectedObjects")
+	account="vm.account"
+	project="vm.project"
+	keys-down="vm.keysDown"
+	send-event="vm.sendEvent(type, value)"
+	event="vm.event"
+	tree-map="vm.treeMap"
+	set-selected-objects="vm.setSelectedObjects(selectedObjects)"
+	initial-selected-objects="vm.initialSelectedObjects")
