ISSUE #344 remove walking mode and measuring tool

--- a/frontend/rightPanel/jade/rightPanel.jade
+++ b/frontend/rightPanel/jade/rightPanel.jade
@@ -11,7 +11,7 @@
 			md-tooltip(md-direction="left") Meta Data
 			md-icon.angular-material-icons content_copy
 		label Meta
-		md-button.md-accent.md-fab.md-mini(aria-label="Measure", ng-click="vm.toggleMeasure()", style="background:{{vm.measureBackground}}")
-			md-tooltip(md-direction="left") Measure
-			md-icon.angular-material-icons straighten
-		label Measure
+//		md-button.md-accent.md-fab.md-mini(aria-label="Measure", ng-click="vm.toggleMeasure()", style="background:{{vm.measureBackground}}")
+//			md-tooltip(md-direction="left") Measure
+//			md-icon.angular-material-icons straighten
+//		label Measure
