--- a/frontend/model/jade/model.jade
+++ b/frontend/model/jade/model.jade
@@ -9,6 +9,7 @@
 		revisions(
 		account="vm.account"
 		model="vm.model"
+		model-name="vm.settings.name"
 		revision="vm.revision")
 
 		panel#leftPanel(
